--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,19 +10,28 @@
     <link rel="stylesheet" href="../css/index.css">
     <!-- 使用内部样式表 -->
     <style>
-        #A2
+        /* ID选择器 */
+        #A2 
         {
-            color:aqua;
+            color: aqua;
+        }
+        .A3
+        {
+            color:chartreuse;
+            font-size: 49px;
         }
     </style>
 </head>
+
 <body>
-    <h1>这是一行废话</h1>
+    <h2>这是一行废话</h2>
     <!-- 使用类选择器class -->
     <h1 class="A1">这是第二行废话</h1>
     <!-- 使用Id选择器 -->
     <h1 id="A2">这是第三行废话</h1>
     <!-- 使用行内样式表 -->
     <h1 style="color:brown">这是第四行废话</h1>
+    <p class="A3">死亡如风，常伴吾身</p>
 </body>
+
 </html>
