--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <title>这是我做的第一个页面</title>
     <!-- 使用外部样式表 -->
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/div.css">
     <!-- 使用内部样式表 -->
     <style>
         /* ID选择器 */
@@ -32,6 +33,15 @@
     <!-- 使用行内样式表 -->
     <h1 style="color:brown">这是第四行废话</h1>
     <p class="A3">死亡如风，常伴吾身</p>
+    <!-- 鼠标悬浮提示title里面的内容 -->
+    <div title="box">
+123
+    </div>
+    <img src="" alt="">
+    <article>
+        Lorem ipsum dolor sit amet.
+        这鞋子纸箱纸箱猪猪侠猪猪侠
+    </article>
 </body>
 
 </html>
